# matcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
deploy/: README.md
deploy/k8s/: configmap.example.yaml  deployment.yaml  ingress.example.yaml  namespace.yaml  pvc.yaml  service.yaml
docs/: template-authoring-guide.md
examples/study-group/: roster-m1.csv  roster-m1.targets.yaml  roster-multi.xlsx  roster-with-preferences.yaml  roster.xlsx  roster.yaml
examples/teacher-class/: expected.audit.json  roster.csv  roster.targets.yaml  roster.xlsx  roster.yaml  rules.yaml
knowledge/: .knowie.json  experience.md  principles.md  vision.md
knowledge/history/: development-log.md
scripts/: build_examples_xlsx.py
specs/001-core-allocator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-template-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-data-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-web-ui-main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-individual-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-m1-rsd-mechanism/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-m2-boston-mechanism/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
tests/: conftest.py
(+293 files in other folders)
