[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matcher"
version = "0.1.0"
description = "核心媒合引擎：依規則過濾出資格集合，於 M0 純抽籤分支下完成分配，輸出可重現的稽核紀錄。"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "weasyprint>=60.0",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
matcher = "matcher.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/matcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
